Stop entry content code elements from overflowing

--- a/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
+++ b/source/wp-content/themes/wporg-developer-2023/src/style/style.scss
@@ -40,6 +40,7 @@ body[class] {
 		border-radius: 2px;
 		padding-left: 3px;
 		padding-right: 3px;
+		max-width: 100%;
 	}
 }
 
